--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
 <body>
 <h1>Isra Aman Aziz</h1>
 <div>
-<li>
-<ul><img src = "https://picsum.photos/200/300"> </ul>
-<ul><img src = "https://picsum.photos/200/300"> </ul>
-<ul><img src = "https://picsum.photos/200/300"> </ul>
-<ul><img src = "https://picsum.photos/200/300"> </ul>
-<ul><img src = "https://picsum.photos/200/300"> </ul>
-<ul><img src = "https://picsum.photos/200/300"> </ul>
-<ul><img src = "https://picsum.photos/200/300"> </ul>
-<ul><img src = "https://picsum.photos/200/300"> </ul>
+<ul>
+<li><img src = "https://picsum.photos/200/300"> </li>
+<li><img src = "https://picsum.photos/200/300"> </li>
+<li><img src = "https://picsum.photos/200/300"> </li>
+<li><img src = "https://picsum.photos/200/300"> </li>
+<li><img src = "https://picsum.photos/200/300"> </li>
+<li><img src = "https://picsum.photos/200/300"> </li>
+<li><img src = "https://picsum.photos/200/300"> </li>
+<li><img src = "https://picsum.photos/200/300"> </li>
 
 
-</li>
+</ul>
 
 
 
