--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
 <body>
 <h1>Isra Aman Aziz</h1>
 <div>
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
 <ul>
-<li><img src = "https://picsum.photos/200/300"> </li>
-<li><img src = "https://picsum.photos/200/300"> </li>
-<li><img src = "https://picsum.photos/200/300"> </li>
-<li><img src = "https://picsum.photos/200/300"> </li>
-<li><img src = "https://picsum.photos/200/300"> </li>
-<li><img src = "https://picsum.photos/200/300"> </li>
-<li><img src = "https://picsum.photos/200/300"> </li>
-<li><img src = "https://picsum.photos/200/300"> </li>
+<li><img src = "https://picsum.photos/200"> </li>
+<li><img src = "https://picsum.photos/300"> </li>
+<li><img src = "https://picsum.photos/400"> </li>
+<li><img src = "https://picsum.photos/500"> </li>
+<li><img src = "https://picsum.photos/600"> </li>
+<li><img src = "https://picsum.photos/700"> </li>
+<li><img src = "https://picsum.photos/800"> </li>
+<li><img src = "https://picsum.photos/900"> </li>
 
 
 </ul>
@@ -23,6 +25,40 @@
 
 </div>
 
+<script>
+
+let slideIndex = 1;
+showSlides(slideIndex);
+
+// Next/previous controls
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+// Thumbnail image controls
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  let i;
+  let slides = document.getElementsByTagName("li");
+  // let dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";
+  }
+  //for (i = 0; i < dots.length; i++) {
+    // dots[i].className = dots[i].className.replace(" active", "");
+  // }
+  slides[slideIndex-1].style.display = "block";
+  // dots[slideIndex-1].className += " active";
+}
+
+
+
+</script>
 
 
 
