--- a/index.html
+++ b/index.html
@@ -13,33 +13,57 @@
   <!-- <script defer="defer" src="/static/js/main.c59f797f.js"></script> -->
   <link href="style.css" rel="stylesheet">
 </head>
-
 <body>
   <h1>Isra Aman Aziz</h1>
-  <div>
+  <br>
+  <br>
+
+  <div id="nav">
+
+
     <label for='tab1Content'>About Me</label>
     <label for='tab2Content'>Work</label>
     <label for='tab3Content'>Writings</label>
-    <br />
-    <br />
-    <input type='radio' name='content' id='tab1Content' checked='true' />
-    <div>Tab 1 content <img src="https://picsum.photos/1200"></div>
-    <input type='radio' name='content' id='tab2Content' />
-    <div>Tab 2 content <img src="https://picsum.photos/1400"></div>
-    <input type='radio' name='content' id='tab3Content' />
-    <div>Tab 3 content <img src="https://picsum.photos/1600"></div>
+  </div>
+  <br />
+  <br />
+  <input type='radio' name='content' id='tab1Content' checked='true' />
+  <div><img src="https://picsum.photos/500">
+    <br>
+    <br>
+    Some texts 1
 
 
+  </div>
+  <input type='radio' name='content' id='tab2Content' />
+  <div><img src="https://picsum.photos/600">
+    <br>
+    <br>
+    Some text 2
+
+  </div>
+  <input type='radio' name='content' id='tab3Content' />
+  <div><img src="https://picsum.photos/700">
+    <br>
+    <br>
+    Some text 3
 
   </div>
 
 
+
+  <br>
+  <br>
+
   <footer>
+    <hr>
     C - <span id="copyright">April 20</span>'01 - Present
-    
+
   </footer>
 
 
 </body>
+
+
 
 </html>
