--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 </head>
 <body>
   <h1>Isra Aman Aziz</h1>
-  <br>
-  <br>
+  <!-- <br> -->
+  <!-- <br> -->
 
   <div id="nav">
 
 
     <label for='tab1Content'>About Me</label>
-    <label for='tab2Content'>Work</label>
-    <label for='tab3Content'>Writings</label>
+    <label for='tab2Content'>Works</label>
+    <label for='tab3Content'>Other things</label>
   </div>
   <br />
   <br />
@@ -31,7 +31,8 @@
   <div><img src="https://picsum.photos/500">
     <br>
     <br>
-    Some texts 1
+    Hello hooman, this is Isra Aman Aziz. <br>
+    I suck at "tell me about yourself?" kind of questions, so I created this!<br>Surf around to know a little bit about me.
 
 
   </div>
@@ -39,25 +40,25 @@
   <div><img src="https://picsum.photos/600">
     <br>
     <br>
-    Some text 2
+    I'm currently pursuing BSc. in Microbiology.<br>Apart from that I'm also interested in finance, creativity, architecture, design, drawings, space, EQ and few other things which I don't even know, yet!
 
   </div>
   <input type='radio' name='content' id='tab3Content' />
   <div><img src="https://picsum.photos/700">
     <br>
     <br>
-    Some text 3
+    Damn, you really wanna know?<br>Okay, so I'm also into music, synth, Korean Drama, K-POP, Bollywood, Hollywood, Hindi, English, New, Old, Sufi and LoFi kinda stuff.<br>Will talk about the kind of foods I'm into someday else.<br>Cya for now, gotta sleep!!!
+
 
   </div>
 
 
 
-  <br>
-  <br>
+  <br> <br>
 
   <footer>
     <hr>
-    C - <span id="copyright">April 20</span>'01 - Present
+    &#169; - <span id="copyright">April 20</span>01 to Present...
 
   </footer>
 
