--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <label for='tab1Content'>About Me</label>
     <label for='tab2Content'>Works</label>
-    <label for='tab3Content'>Other things</label>
+    <label for='tab3Content'>Extras</label>
   </div>
   <br />
   <br />
@@ -40,7 +40,7 @@
   <div><img src="https://picsum.photos/600">
     <br>
     <br>
-    I'm currently pursuing BSc. in Microbiology.<br>Apart from that I'm also interested in finance, creativity, architecture, design, drawings, space, EQ and few other things which I don't even know, yet!
+    I'm currently pursuing BSc. in Microbiology&#129515;.<br>Apart from that I'm also interested in finance&#128176;, creativity&#129504;, archite&#128090;cture&#127751;, design&#128571;, drawings&#127912;, space&#127756;, EQ, fashion&#128090; and few other things which I don't even know, yet!
 
   </div>
   <input type='radio' name='content' id='tab3Content' />
@@ -61,6 +61,9 @@
     &#169; - <span id="copyright">April 20</span>01 to Present...
 
   </footer>
+
+
+</body>
 
 
 </body>
