--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <!-- <script defer="defer" src="/static/js/main.c59f797f.js"></script> -->
   <link href="style.css" rel="stylesheet">
 </head>
+
 <body>
   <h1>Isra Aman Aziz</h1>
   <!-- <br> -->
@@ -32,7 +33,8 @@
     <br>
     <br>
     Hello hooman, this is Isra Aman Aziz. <br>
-    I suck at "tell me about yourself?" kind of questions, so I created this!<br>Surf around to know a little bit about me.
+    I suck at "tell me about yourself?" kind of questions, so I created this!<br>Surf around to know a little bit about
+    me.
 
 
   </div>
@@ -40,14 +42,18 @@
   <div><img src="https://picsum.photos/600">
     <br>
     <br>
-    I'm currently pursuing BSc. in Microbiology&#129515;.<br>Apart from that I'm also interested in finance&#128176;, creativity&#129504;, archite&#128090;cture&#127751;, design&#128571;, drawings&#127912;, space&#127756;, EQ, fashion&#128090; and few other things which I don't even know, yet!
+    I'm currently pursuing BSc. in Microbiology&#129515;.<br>Apart from that I'm also interested in finance&#128176;,
+    creativity&#129504;, architecture&#127751;, design&#128571;, drawings&#127912;, space&#127756;, EQ, fashion&#128090;
+    and few other things which I don't even know, yet!
 
   </div>
   <input type='radio' name='content' id='tab3Content' />
   <div><img src="https://picsum.photos/700">
     <br>
     <br>
-    Damn, you really wanna know?<br>Okay, so I'm also into music, synth, Korean Drama, K-POP, Bollywood, Hollywood, Hindi, English, New, Old, Sufi and LoFi kinda stuff.<br>Will talk about the kind of foods I'm into someday else.<br>Cya for now, gotta sleep!!!
+    Damn, you really wanna know?<br>Okay, so I'm also into music, synth, Korean Drama, K-POP, Bollywood, Hollywood,
+    Hindi, English, New, Old, Sufi and LoFi kinda stuff.<br>Will talk about the kind of foods I'm into someday
+    else.<br>Cya for now, gotta sleep!!!
 
 
   </div>
@@ -61,9 +67,6 @@
     &#169; - <span id="copyright">April 20</span>01 to Present...
 
   </footer>
-
-
-</body>
 
 
 </body>
