--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <br />
   <br />
   <input type='radio' name='content' id='tab1Content' checked='true' />
-  <div><img src="https://picsum.photos/500">
+  <div><img src="PXL_20221225_094105722.jpg">
     <br>
     <br>
     Hello hooman, this is Isra Aman Aziz. <br>
@@ -41,7 +41,7 @@
 
   </div>
   <input type='radio' name='content' id='tab2Content' />
-  <div><img src="https://picsum.photos/600">
+  <div><img src="IMG-20230203-WA0007.jpg">
     <br>
     <br>
     I'm currently pursuing BSc. in Microbiology&#129515;.<br>Apart from that I'm also interested in finance&#128176;,
@@ -50,7 +50,7 @@
 
   </div>
   <input type='radio' name='content' id='tab3Content' />
-  <div><img src="https://picsum.photos/700">
+  <div><img src="IMG-20230311-WA0001.jpg">
     <br>
     <br>
     Damn, you really wanna know?<br>Okay, so I'm also into music, synth, Korean Drama, K-POP, Bollywood, Hollywood,
